<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <cbs.hreye.utilities.CustomTextView
        android:id="@+id/dlg_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:gravity="center"
        android:padding="@dimen/margin_top"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_text" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margin_top"
        android:background="@color/view_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/lv_mod"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_top"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/modify"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/normal_text" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/view_color" />

        <Button
            android:id="@+id/lv_auth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/normal_text" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/view_color" />

        <Button
            android:id="@+id/lv_can"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/normal_text" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/view_color" />
</LinearLayout>
